@@ -78,10 +78,12 @@ void createBareMainWindow () {
 	XSetWMIconName(Xdpy, Xwin, &windowName);
 	
 	/* are we running without Motif, and as a plugin? */
-	if (!RUNNINGASPLUGIN) {
+	if (!RUNNINGONAMD64) {
+		if (!RUNNINGASPLUGIN) {
                         /* just map us to the display */
                         XMapWindow(Xdpy, Xwin);
                         XSetInputFocus(Xdpy, Pwin, RevertToParent, CurrentTime);
+		}
 	}
 }
 #endif
